--- a/.github/workflows/reusable-release.yaml
+++ b/.github/workflows/reusable-release.yaml
@@ -39,25 +39,25 @@ jobs:
       - name: Show available Docker Buildx platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
 
-      - name: Login to docker.io registry
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: Login to docker.io registry
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USER }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Login to ghcr.io registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ env.GH_USER }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Login to ghcr.io registry
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ghcr.io
+#          username: ${{ env.GH_USER }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to ECR
-        uses: docker/login-action@v2
-        with:
-          registry: public.ecr.aws
-          username: ${{ secrets.ECR_ACCESS_KEY_ID }}
-          password: ${{ secrets.ECR_SECRET_ACCESS_KEY }}
+#      - name: Login to ECR
+#        uses: docker/login-action@v2
+#        with:
+#          registry: public.ecr.aws
+#          username: ${{ secrets.ECR_ACCESS_KEY_ID }}
+#          password: ${{ secrets.ECR_SECRET_ACCESS_KEY }}
 
       - name: Checkout code
         uses: actions/checkout@v3
@@ -97,18 +97,18 @@ jobs:
 
       ## push images to registries
       ## only for canary build
-      - name: Build and push
-        if: ${{ inputs.goreleaser_config == 'goreleaser-canary.yml' }}
-        uses: docker/build-push-action@v4
-        with:
-          platforms: linux/amd64, linux/arm64
-          file: ./Dockerfile.canary # path to Dockerfile
-          context: .
-          push: true
-          tags: |
-            aquasec/trivy:canary
-            ghcr.io/aquasecurity/trivy:canary
-            public.ecr.aws/aquasecurity/trivy:canary
+#      - name: Build and push
+#        if: ${{ inputs.goreleaser_config == 'goreleaser-canary.yml' }}
+#        uses: docker/build-push-action@v4
+#        with:
+#          platforms: linux/amd64, linux/arm64
+#          file: ./Dockerfile.canary # path to Dockerfile
+#          context: .
+#          push: true
+#          tags: |
+#            aquasec/trivy:canary
+#            ghcr.io/aquasecurity/trivy:canary
+#            public.ecr.aws/aquasecurity/trivy:canary
 
       - name: Cache Trivy binaries
         uses: actions/cache@v3.2.4
